tests/rosetta/out/Smalltalk/call-a-foreign-language-function.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| strdup main go1 c2 |
strdup := [:s | (s + ''). ].
main := [ go1 := 'hello C'.
c2 := strdup value: go1.
Transcript show: (c2) printString; cr. ].
main value.
